<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/otherSearchesTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/othSearchTableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/othSearchTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:text="@string/other_searches"
            android:textColor="@color/dark_orange"
            android:textSize="17sp"
            android:textStyle="bold|italic" />
    </TableRow>

    <TableRow
        android:id="@+id/othSearchTableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/othSearchDefinitionRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/definition_search"
            android:textColor="@color/dark_red"
            android:textSize="15sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/othSearchDefinitionInflater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

    <TableRow
        android:id="@+id/othSearchTableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/othSrchRelatedWebsitesRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/search_websites_related_to"
            android:textColor="@color/dark_green"
            android:textSize="15sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/othSearchRelatedToinflater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

    <TableRow
        android:id="@+id/othSearchTableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/othSrchWebsitesLinkToRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/search_websites_that_link_to"
            android:textColor="@color/darker_blue"
            android:textSize="15sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/othSearchlinkToInflater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

    <TableRow
        android:id="@+id/othSearchTableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/othSrchTitleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/search_in_title"
            android:textColor="@color/dark_orange"
            android:textSize="15sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/othSearchTitleInflater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

    <TableRow
        android:id="@+id/othSearchTableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/othSrchUrlRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/search_in_url"
            android:textColor="@color/dark_violet"
            android:textSize="15sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/othSearchUrlInflater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

    <TableRow
        android:id="@+id/othSearchTableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/othSrchAnchorRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/search_in_anchor"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/othSearchAnchorInflater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

</TableLayout>